# moderation-service

./: .gitignore  CNAME  Makefile  README.md  docker-compose.dev.yaml  docker-compose.stack.yaml  docker-compose.yaml  docker-setup.sh  go.work  go.work.sum  index.html  local.env  nginx.conf  nginx.stack.conf  package.json
apps/api/: go.mod  go.sum
apps/auth/: Dockerfile  go.mod  go.sum
apps/moderation/: .dockerignore  Dockerfile  pyproject.toml  server.py
apps/moderation/src/: config.py  helper.py  logger.py
apps/moderation/src/db/: __init__.py  postgres.py
apps/moderation/src/listeners/: __init__.py  new_task.py
apps/moderation/src/minio/: __init__.py  minio.py
apps/moderation/src/models/: __init__.py  detoxify.py  easyocr.py  rubertconv.py  sbertpunc.py  wav2vec2.py  yolo11.py
apps/moderation/src/nats/: __init__.py  nats.py
apps/moderation/src/processors/: __init__.py  audio.py  image.py  text.py  video.py
apps/result-agregator/: Dockerfile  go.mod  go.sum
apps/task/: .dockerignore  Dockerfile  go.mod  go.sum
apps/task-agregator/: Dockerfile  go.mod  go.sum
apps/test/: Dockerfile  go.mod  go.sum
apps/webhook/: go.mod
assets/: index-1a1a3085.css  index-2b391fc6.js  index-560cbba1.css
backend/: Makefile  docker-compose.yaml  requirements.txt  server.py
backend/auth/: Dockerfile  alembic.ini  requirements.txt  server.py
backend/migrations/: env.py
backend/moderation/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
backend/src/: config.py  database.py  manager.py  models.py  router.py  util.py
cli/: cli.go  go.mod  go.sum  prepare.go
cli/codegen/: grpc.go  permissions.go
configs/: nginx.conf  permissions.yaml  prometheus.yml
frontend/: .dockerignore  .eslintrc.json  .prettierignore  .prettierrc  Dockerfile  global.d.ts  index.html  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/.storybook/: main.ts  preview.ts
frontend/locales/: en.json  ru.json
frontend/src/: App.css  App.tsx  config.ts  footer.tsx  hooks.ts  i18n.ts  index.css  index.tsx  interfaces.ts  main.tsx  middleware.ts  navigation.ts  provider.tsx
libs/config/: config.go  go.mod
libs/config-python/: pyproject.toml
libs/config-python/config/: __init__.py  config.py
libs/fx/: fx.go  go.mod  go.sum
libs/grpc/: .gitignore  Makefile  go.mod  go.sum
libs/jwt/: go.mod  jwt.go
libs/logger/: go.mod  go.sum  logger.go
libs/logger-python/: pyproject.toml
libs/logger-python/logger/: __init__.py  logger.py
libs/migrations/: Dockerfile  go.mod  go.sum  main.go  migrations.go
libs/minio/: go.mod  go.sum  minio.go
libs/minio-python/: pyproject.toml
libs/minio-python/minio/: __init__.py  client.py
libs/models/: go.mod  go.sum
libs/nats/: events.go  go.mod  go.sum  jetstream.go  jetstream_test.go  names.go  nats.go  queue.go
libs/nats-python/: pyproject.toml
libs/nats-python/nats/: __init__.py  client.py
migrations/: go.mod
(+423 files in other folders)
