[tool.poetry]
name = "config"
version = "0.0.0"
description = ""
authors = [
    {name = "urodstvo"}
]
license = {text = "MIT"}    
packages = [{include = "config"}]

[tool.poetry.dependencies]
python = ">=3.11,<4"
dotenv = ">=0.9.9,<0.10.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
