[tool.poetry]
name = "logger"
version = "0.0.0"
description = ""
authors = [
    {name = "urodstvo"}
]
license = {text = "MIT"}    
packages = [{include = "logger"}]

[tool.poetry.dependencies]
python = ">=3.11,<4"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
