[tool.poetry]
name = "minio"
version = "0.0.0"
description = ""
authors = [
    {name = "urodstvo"}
]
license = {text = "MIT"}    
packages = [{include = "minio"}]

[tool.poetry.dependencies]
python = ">=3.11,<4"
minio = ">=7.2.15,<8.0.0"
config = { path = "../config-python"}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
