[tool.poetry]
name = "nats"
version = "0.0.0"
description = ""
authors = [
    {name = "urodstvo"}
]
license = {text = "MIT"}    
packages = [{include = "nats"}]

[tool.poetry.dependencies]
python = ">=3.11,<4"
nats-py = ">=2.10.0,<3.0.0"
config = { path = "../config-python"}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
